feat: implement premium auth UI, fix Vietnamese input, and perform system-wide audit
- Implemented SDDM Astronaut theme, Hyprlock, Hypridle, and Pantheon Polkit agent.
- Fixed Vietnamese input (Fcitx5) for WPS Office and other Qt/GTK apps.
- Optimized environment variables and removed deprecated IM settings on Wayland.
- Completed a comprehensive system audit and removed all diagnostic leftovers.
- Updated README.md with system architecture and maintenance commands.

--- a/dotfiles/hypr/autostart.conf
+++ b/dotfiles/hypr/autostart.conf
@@ -38,7 +38,7 @@ launch_if_missing udiskie udiskie --tray
 if command -v wl-paste >/dev/null 2>&1 && command -v cliphist >/dev/null 2>&1; then
   pgrep -fa 'wl-paste.*cliphist' >/dev/null || {
     log "Launching: cliphist watcher"
-    wl-paste --watch cliphist store &
+    wl-paste --watch cliphist store -max-items 100 &
   }
 else
   log "Missing: wl-paste or cliphist"
