--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -31,12 +31,16 @@ env = WLR_FRACTIONAL_SCALE,1
 env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
 
-# Khai báo phiên Wayland/DE để portal & các app nhận diện đúng
+# Set Wayland/DE session vars so portals & apps detect the environment
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = NIXOS_OZONE_WL,1
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
+# Input Method
+env = XMODIFIERS,@im=fcitx
+env = QT_IM_MODULE,fcitx
 
 # Set exact mode/scale for laptop panel
 monitor = eDP-1,preferred,0x0,1.5
@@ -50,33 +54,35 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = sh -c 'command -v xrdb >/dev/null 2>&1 && xrdb -merge ~/.Xresources'
 exec-once = ~/.config/hypr/autostart.conf
 exec-once = waybar
+exec-once = /run/current-system/sw/libexec/pantheon-agent-polkit
 
 # ── Keybindings ──────────────────────────────────────────────────
-# --- Cơ bản ---
+# --- Basic ---
 bind = $mod, Return, exec, kgx
 bind = $mod, D, exec, wofi --show drun --conf ~/.config/wofi/config-app.ini --style ~/.config/wofi/style.css
 bind = $mod, W, exec, ~/.config/hypr/toggle_waybar.sh
 bind = $mod, Q, killactive
 bind = $mod, F, togglefloating
 bind = $mod SHIFT, E, exit
+bind = $mod, L, exec, hyprlock
 
 # --- Screen Rotate ---
-# Cycle 0→90→270 cho màn đang được chọn (under-cursor / focused)
+# Cycle 0→90→270 for the focused / under-cursor monitor
 bind = $mod ALT, R, exec, ~/.config/hypr/rotate_select.sh
 
-# (tuỳ chọn) Ép 0° nhanh cho màn đang chọn
+# (optional) Force 0° for the focused monitor
 bind = $mod ALT, X, exec, ~/.config/hypr/rotate_select.sh --set 0
 
-# (tuỳ chọn) Xoay tất cả màn (cycle)
+# (optional) Cycle rotate all monitors
 bind = $mod ALT SHIFT, R, exec, ~/.config/hypr/rotate_select.sh --all
 
-# (tuỳ chọn) Ép 90° cho tất cả màn
+# (optional) Force 90° for all monitors
 bind = $mod ALT CTRL, R, exec, ~/.config/hypr/rotate_select.sh --all --set 1
 
 # --- Clipboard ---
 bind = $mod, V, exec, ~/.config/waybar/cliphist.sh
 
-# --- Di chuyển tiêu điểm ---
+# --- Focus movement ---
 bind = $mod, H, movefocus, l
 bind = $mod, L, movefocus, r
 bind = $mod, K, movefocus, u
@@ -95,7 +101,7 @@ bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
 
-# --- Âm thanh & độ sáng ---
+# --- Audio & Brightness ---
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
@@ -103,17 +109,17 @@ bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 
-# --- Di chuột ---
-bindm = $mod, mouse:272, movewindow     # Chuột trái để kéo cửa sổ
-bindm = $mod, mouse:273, resizewindow   # Chuột phải để resize cửa sổ
+# --- Mouse ---
+bindm = $mod, mouse:272, movewindow     # Left-click to drag window
+bindm = $mod, mouse:273, resizewindow   # Right-click to resize window
 
 # ── Screenshot ───────────────────────────────────────────────────
 
-# Super + S: Chụp toàn màn hình và lưu vào ~/Pictures
+# Super + S: Fullscreen screenshot, save to ~/Pictures
 bind = $mod, S, exec, grim ~/Pictures/screenshot-$(date +%s).png
 
-# Super + Shift + S: Chụp vùng chọn bằng chuột và lưu
+# Super + Shift + S: Region select screenshot, save to ~/Pictures
 bind = $mod SHIFT, S, exec, grim -g "$(slurp)" ~/Pictures/selection-$(date +%s).png
 
-# Super + C: Chụp vùng chọn rồi copy vào clipboard
+# Super + C: Region select screenshot, copy to clipboard
 bind = $mod, C, exec, grim -g "$(slurp)" - | wl-copy
