--- a/dotfiles/wofi/config-app.ini
+++ b/dotfiles/wofi/config-app.ini
@@ -1,10 +1,10 @@
 width=40%
-lines=11
+lines=8
 columns=2
-prompt=Search apps...
+prompt=Search...
 matching=fuzzy
 insensitive=true
 allow_images=true
-image_size=25
+image_size=20
 hide_scroll=true
 normal_window=false
