--- a/dotfiles/wofi/config-clip.ini
+++ b/dotfiles/wofi/config-clip.ini
@@ -1,6 +1,6 @@
-width=800        # hoặc thay bằng khoảng 40% độ phân giải, ví dụ: 3072 * 0.4 = 1228
-height=300       # tuỳ ý
-lines=11         # số dòng
+width=800        # approx 40% of screen width
+height=300       # popup height
+lines=11         # number of visible lines
 prompt=Clipboard
 hide_scroll=true
 matching=fuzzy
