Audit Rerun: Phase 1 Rigidity applied

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -54,7 +54,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = sh -c 'command -v xrdb >/dev/null 2>&1 && xrdb -merge ~/.Xresources'
 exec-once = ~/.config/hypr/autostart.conf
 exec-once = waybar
-exec-once = /run/current-system/sw/libexec/pantheon-agent-polkit
+exec-once = /nix/store/4qk1a19d4ry8hfk69dv5lzd42shr6dk4-pantheon-agent-polkit-8.0.1/libexec/policykit-1-pantheon/io.elementary.desktop.agent-polkit
 
 # ── Keybindings ──────────────────────────────────────────────────
 # --- Basic ---
