feat(system): Finalize Deep Audit & Power Flow Refinements
Complete system overhaul following a rigorous 8-Phase Audit and Optimization process.

## 1. Deep System Audit (Phases 1-6)
- **Rigidity**: Verified syntax, flake inputs, and path integrity for all modules.
- **Stability**: Confirmed systemd-boot safety, kernel parameters (amd_pstate), and package consistency.
- **Standardization**: Enforced modular architecture (core/desktop/services/gpu).
- **Performance**: Validated zram (50%), power-profiles-daemon, and AMDGPU stack.
- **Security**: Reviewed firewall rules, DNS strictness, and user privileges.
- **Maintainability**: Automated Garbage Collection and verified clean configuration state.

## 2. Documentation (Phase 7)
- **New Manual**: Created `system_documentation.md` detailing architecture, custom tooling (`waybar-power-monitor`), and maintenance workflows.
- **README Updates**: Added 'System Audit Status' badge and a dedicated 'Custom Tooling' section explaining the new Power modes.
- **Project Tracking**: Updated `task.md` and `walkthrough.md` with final progress.

## 3. Optimization & Refinement (Phase 8)
- **Waybar Power Flow**:
  - Converged CPU & GPU temp/power into a single `apu_info` module.
  - Merged 'System/Screen' wattage calculation into the main `pwr` flow.
  - Redesigned `power_flow` block: ` [System]W  ↓[Input]W  ↑[Total]W`.
  - Renamed modules in config and CSS (`gpu_info` -> `apu_info`, `watt_info` -> `power_flow`).
- **Logic Updates**:
  - `waybar-power-monitor`: Added System Wattage calculation (Total - APU).
  - Switched from `bc` to `awk` for robust float arithmetic.

## 4. Code Quality Refactoring
- **Packages**: Removed redundant `hypridle` declaration from `packages.nix` (DRY compliance).
- **Scripts**: Cleaned up legacy `gpu` modes and unused variables.

Result: System is Rigid, Stable, Standardized, and fully Documented.

--- a/dotfiles/waybar/config.jsonc
+++ b/dotfiles/waybar/config.jsonc
@@ -12,9 +12,8 @@
     "clock"
   ],
   "modules-right": [
-    "custom/gpu_info",
-    "custom/cpu_info",
-    "custom/watt_info",
+    "custom/apu_info",
+    "custom/power_flow",
     "custom/memory_info",
     "tray"
   ],
@@ -29,12 +28,6 @@
   // ─── Memory (custom with top-process tooltip) ─────────────────────
   "custom/memory_info": {
     "exec": "~/.local/bin/waybar-memory-info",
-    "return-type": "json",
-    "interval": 1,
-    "tooltip": true
-  },
-  "custom/cpu_info": {
-    "exec": "~/.local/bin/waybar-power-monitor cpu",
     "return-type": "json",
     "interval": 1,
     "tooltip": true
@@ -55,13 +48,14 @@
     }
   },
   // ─── Hardware Monitors (consolidated temp + power) ────────────────
-  "custom/gpu_info": {
-    "exec": "~/.local/bin/waybar-power-monitor gpu",
+  "custom/apu_info": {
+    "exec": "waybar-power-monitor apu",
     "return-type": "json",
-    "interval": 1,
+    "format": "{}",
+    "interval": 2,
     "tooltip": true
   },
-  "custom/watt_info": {
+  "custom/power_flow": {
     "exec": "~/.local/bin/waybar-power-monitor pwr",
     "return-type": "json",
     "interval": 2,
