--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -47,8 +47,7 @@ env = XMODIFIERS,@im=fcitx
 env = QT_IM_MODULE,fcitx
 
 # Set exact mode/scale for laptop panel
-monitor = eDP-1,preferred,0x0,1.5
-monitor = HDMI-A-1,preferred,-2560x0,1.0
+monitor = ,preferred,auto,auto
 
 # start IBus once
 exec-once = systemctl --user import-environment --all 
@@ -58,7 +57,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = sh -c 'command -v xrdb >/dev/null 2>&1 && xrdb -merge ~/.Xresources'
 exec-once = ~/.config/hypr/autostart.conf
 exec-once = waybar
-exec-once = /nix/store/4qk1a19d4ry8hfk69dv5lzd42shr6dk4-pantheon-agent-polkit-8.0.1/libexec/policykit-1-pantheon/io.elementary.desktop.agent-polkit
+exec-once = kanshi
 
 # ── Keybindings ──────────────────────────────────────────────────
 # --- Basic ---
