feat: switch to foot terminal and optimize yazi
- Replaced GNOME Console (kgx) with Foot terminal as the default emulator.
- Migrated Yazi configuration to Home Manager for better plugin management.
- Implemented Tier 1-3 Yazi improvements:
    - Added zoxide, fzf, fd, and ripgrep for faster navigation/searching.
    - Enabled high-fidelity Sixel image previews via ImageMagick and Chafa.
    - Synced terminal and Yazi themes with the system 'GitHub Dark Dimmed' palette.
    - Added smart sorting, hidden file visibility, and file size linemodes.
- Configured Foot terminal with custom padding, transparency, and matching colors.
- Added 'YAZI_USAGE.md' with detailed shortcuts and feature guides.
- Included previous updates for atomic notes and waybar styling.

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -61,7 +61,7 @@ exec-once = kanshi
 
 # ── Keybindings ──────────────────────────────────────────────────
 # --- Basic ---
-bind = $mod, Return, exec, kgx
+bind = $mod, Return, exec, foot
 bind = $mod, D, exec, wofi --show drun --conf ~/.config/wofi/config-app.ini --style ~/.config/wofi/style.css
 bind = $mod, W, exec, ~/.config/hypr/toggle_waybar.sh
 bind = $mod, Q, killactive
